[project]
name = "sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.11.0",
    "cloud-sql-python-connector>=1.18.5",
    "fastapi>=0.121.2",
    "isort>=7.0.0",
    "pg8000>=1.31.5",
    "pydantic-settings>=2.12.0",
    "pylint>=4.0.3",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0"
]
